# soundvia-python

./: .gitignore  README.md  pyproject.toml  test.py
soundvia/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
