[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundvia"
version = "1.0.1"
description = "Python client for the soundvia.eu API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["soundvia", "music", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []   # stdlib only — no extra installs needed

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://soundvia.eu"
Documentation = "https://soundvia.eu/developer"
Source = "https://github.com/soundviadigital/soundvia-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["soundvia*"]
